// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NextMuiLink Component renders in default state 1`] = `
<DocumentFragment>
  <a
    class="css-15ha3g6-MuiTypography-root"
    href="/test"
  >
    Test
  </a>
</DocumentFragment>
`;

exports[`NextMuiLink Component renders in naked state 1`] = `
<DocumentFragment>
  <a
    href="/test"
  >
    Test
  </a>
</DocumentFragment>
`;

exports[`NextMuiLink Component renders with href object 1`] = `
<DocumentFragment>
  <a
    href="/test"
  >
    Test
  </a>
</DocumentFragment>
`;
